# ctfshitcli

./: .ctf_config.json.example  .env.example  .gitattributes  .gitignore  LICENSE  README.md  csl_ctf_entry.py  flags.example.csv  main.py  pyproject.toml  requirements.txt
src/: __init__.py  ai_assistant.py  api_client.py  challenge_scraper.py  config_manager.py  discord_notifier.py  file_downloader.py  flag_submitter.py  hint_manager.py  offline_cache.py  scoreboard_tracker.py  script_manager.py  submission_history.py  ui_renderer.py  watch_daemon.py  workspace_manager.py  writeup_exporter.py
